fix: set cookie prompt z-index value

--- a/src/components/cookie-prompt/CookiePrompt.module.scss
+++ b/src/components/cookie-prompt/CookiePrompt.module.scss
@@ -17,6 +17,7 @@ $image-size-md: 160px;
   max-height: 100vh;
   padding: 1.5rem 2rem;
   background: #eee;
+  z-index: 1000;
 
   display: flex;
   flex-direction: row;
